--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <title>カウボーイビバップいいよ！！</title>
         <meta name="author" content="誰か">
-        <meta name="description" content="君も人生、棒に振ってみないかい？">
+        <meta name="description" content="さぁ君も、一緒に人生、棒に振ってみないか？">
         <link rel="shortcut icon" type="image/x-icon" href="https://th.bing.com/th/id/Rc8fb4c40af2c9ba0966c7e86a7d04378?rik=IMTwWfwa9Lgitw&riu=http%3a%2f%2fi.imgur.com%2fg32tHDp.png&ehk=VsqqajPp92GPX4XEqnMW1QSWBz9%2bb2ZVEmStc%2b64EBM%3d&risl=&pid=ImgRaw">
 
         <!--スタイルの読み込み（cssファイルの読み込み）-->
@@ -18,7 +18,7 @@
 
         <!--自己紹介シート-->
         <div class="self-sheet">
-            チンジャオロース！をうをう
+            OP曲の『Tank!』で有名です
 
             <!--タイトル-->
             <div class="title">
